# yandex-music-discord-rich-pressence

./: README.md  package.json  pnpm-lock.yaml
rp-js-server/: package.json
rp-rust-server/: .env  .gitignore  Cargo.toml  readme.md
rp-rust-server/src/: commands.rs  discord_thread.rs  main.rs  server_thread.rs
src/: discord-rich-pressence.js  tampermonkey-watch-script.js
watch-script/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
watch-script/src/: music.youtube.js  tampermonkey-watch-script.js
